Refine Global Overflow Styling for Consistent Layout (On annule le scrolling)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@
 
 @layer base {
   body {
-    @apply bg-secondary leading-relaxed md:overflow-hidden overflow-x-hidden;
+    @apply bg-secondary leading-relaxed overflow-hidden;
   }
   .page {
     @apply w-full h-screen;
