--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,10 +20,10 @@
 
 @layer base {
   body {
-    @apply bg-secondary leading-relaxed overflow-hidden min-h-screen;
+    @apply bg-secondary leading-relaxed overflow-hidden;
   }
   .page {
-    @apply w-full min-h-screen;
+    @apply w-full h-screen;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
